➕ADD: PDF report generation to dashboard
Introduces a 'Generar Reporte' button in the dashboard that generates a PDF summary of key metrics using jspdf. Handles dynamic import of jspdf and provides a JSON download fallback if the library is not installed. Also includes minor code cleanups, such as removing console.log statements and improving code formatting.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^3.0.2",
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.3",
     "mysql2": "^3.14.4",
     "next": "^15.5.2",
     "react": "19.1.0",
